# ros-structured-nav

./: README.md
base_local_planner/cfg/: BaseLocalPlanner.cfg
base_local_planner/include/base_local_planner/: map_grid_cost_function.h  trajectory.h  trajectory_planner.h
base_local_planner/src/: map_grid_cost_function.cpp  trajectory_planner.cpp  trajectory_planner_ros.cpp
dwa_local_planner/cfg/: DWAPlanner.cfg
dwa_local_planner/include/dwa_local_planner/: dwa_planner.h
dwa_local_planner/src/: dwa_planner.cpp
maneuver_navigation/: CMakeLists.txt  package.xml
maneuver_navigation/config/: footprint_local_planer_params_ropod.yaml  footprint_local_planer_params_ropod_load.yaml  footprint_local_planner_params_ropod.yaml
maneuver_navigation/launch/: maneuver_navigation.launch  maneuver_navigation_dwa.launch
maneuver_navigation/msg/: Configuration.msg  Feedback.msg  goal.msg
maneuver_navigation/src/: maneuver_navigation.cpp  maneuver_navigation.h  maneuver_navigation_ed.cpp  maneuver_navigation_ed.h  maneuver_navigation_rosnode.cpp
maneuver_planner/: CHANGELOG.rst  CMakeLists.txt  bgp_plugin.xml  package.xml
maneuver_planner/include/maneuver_planner/: maneuver_planner.h  parameter_generator.h
maneuver_planner/src/: maneuver_planner.cpp  parameter_generator.cpp
napoleon_driving/: CMakeLists.txt  package.xml  readme.md
napoleon_driving/config/: footprint_local_planner_params_ropod_load.yaml
napoleon_driving/launch/: napoleon_driving.launch
napoleon_driving/msg/: Configuration.msg  Goal.msg
napoleon_driving/src/: napoleon_config.h  napoleon_driving.cpp  napoleon_driving.h  napoleon_driving_rosnode.cpp  napoleon_functions.cpp  napoleon_functions.h
