<package>
    <name>maneuver_planner</name>
    <version>0.0.1</version>
    <description>

        Plans a maeouver based on the destination position orientation and current position of a rectangular differential drive robot

    </description>
    <author>Cesar Lopez</author>
    <author>cesar.lopez.mar@gmail.com</author>
    <maintainer email="cesar.lopez.mar@gmail.com">Cesar Lopez</maintainer>

    <license>BSD</license>
    <url></url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>base_local_planner</build_depend>
    <build_depend>tf</build_depend>
    <!--<build_depend>angles</build_depend>-->
    <build_depend>eigen</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>base_local_planner</run_depend>
    <run_depend>tf</run_depend>
    <!--<run_depend>angles</run_depend>-->
    <run_depend>eigen</run_depend>

    <export>
        <nav_core plugin="${prefix}/bgp_plugin.xml" />
    </export>

</package>


